Update to 2.6.4+defsg-2
* Update configuration to point to new version
* Update postinst to reference new version
* Add $DESTDIR in postinst

--- a/debinject.conf
+++ b/debinject.conf
@@ -4,11 +4,11 @@
 SOURCE := fpc
 
 # The binary packages required to bootstrap the source
-PACKAGES := fp-compiler-2.6.2 fp-units-base-2.6.2 fp-units-rtl-2.6.2 \
-            fp-utils-2.6.2
+PACKAGES := fp-compiler-2.6.4 fp-units-base-2.6.4 fp-units-rtl-2.6.4 \
+            fp-utils-2.6.4
 
 # The base Debian revision to use for bootstrapping
-VERSION := 2.6.2-8
+VERSION := 2.6.4+dfsg-2
 
 # The architectures to which Debian has bootstrapped the source
 ARCHES := amd64 armel armhf i386 powerpc sparc
