Make more cross-architecture
* Actually support amd64, armel, armhc, and i386.
* Stop claiming to support anything else.

--- a/debinject.conf
+++ b/debinject.conf
@@ -10,8 +10,8 @@ PACKAGES := fp-compiler-2.6.4 fp-units-base-2.6.4 fp-units-rtl-2.6.4 \
 # The base Debian revision to use for bootstrapping
 VERSION := 2.6.4+dfsg-2
 
-# The architectures to which Debian has bootstrapped the source
-ARCHES := amd64 armel armhf i386 powerpc sparc
+# Supported architectures (adding new ones means editing the confscript)
+ARCHES := amd64 armel armhf i386
 
 # The preferred Debian mirror
 MIRROR := ftp.uk.debian.org
